--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-watch-connectivity",
+  "name": "@d3banking/react-native-watch-connectivity",
   "version": "1.1.0",
   "description": "React Native library to enable communication with Apple Watch app",
   "main": "dist/index.js",
@@ -36,7 +36,14 @@
   "scripts": {
     "build": "rm -rf dist && yarn tsc && cp ./lib/RNWatch.d.ts ./dist/RNWatch.d.ts && yarn lint ./dist/**/*.d.ts ./dist/**/*.js --fix --quiet",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx",
-    "precommit": "tsc --skipLibCheck && lint-staged"
+    "precommit": "tsc --skipLibCheck && lint-staged",
+    "release": "standard-version --releaseCommitMessageFormat 'chore(release): {{currentTag}}\n[skip ci]'"
+  },
+  "standard-version": {
+    "scripts": {
+      "prerelease": "yarn build",
+      "posttag": "git push origin --follow-tags && npm publish"
+    }
   },
   "repository": {
     "type": "git",
@@ -64,20 +71,21 @@
     "lodash.sortby": "^4.7.0"
   },
   "devDependencies": {
-    "typescript": "^3.9.5",
-    "eslint-plugin-typescript-sort-keys": "^1.2.0",
-    "eslint": "^6.8.0",
-    "@types/react-native": "^0.62.2",
-    "@types/react": "^16.9.34",
-    "react-native": "^0.62.2",
-    "react": "16.11.0",
     "@react-native-community/eslint-config": "^1.1.0",
-    "lint-staged": "^10.1.3",
-    "husky": "^4.2.5",
-    "sort-package-json": "^1.41.0",
-    "prettier": "^2.0.4",
+    "@types/lodash.sortby": "^4.7.6",
+    "@types/react": "^16.9.34",
+    "@types/react-native": "^0.62.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "@types/lodash.sortby": "^4.7.6"
+    "eslint-plugin-typescript-sort-keys": "^1.2.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.3",
+    "prettier": "^2.0.4",
+    "react": "16.11.0",
+    "react-native": "^0.62.2",
+    "sort-package-json": "^1.41.0",
+    "standard-version": "^9.5.0",
+    "typescript": "^3.9.5"
   },
   "jest": {
     "preset": "react-native"
