--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "type": "git",
     "url": "https://github.com/mtford90/react-native-watch-connectivity.git"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "peerDependencies": {
     "react": ">=15.1",
     "react-native": ">=0.40"
